--- a/package.json
+++ b/package.json
@@ -8,11 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
+    "@supabase/supabase-js": "^2.45.6",
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.10.2",
+    "openai": "^4.68.4",
+    "quagga": "^0.12.1",
     "register-service-worker": "^1.7.2",
+    "roboto-fontface": "*",
+    "tesseract.js": "^5.1.1",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuetify": "^3.7.3",
+    "vuex": "^4.0.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -26,7 +40,9 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "eslintConfig": {
     "root": true,
