--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.8.3",
     "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
     "openai": "^4.68.4",
+    "pdfmake": "^0.2.14",
+    "pdfobject": "^2.3.0",
     "quagga": "^0.12.1",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
@@ -24,8 +27,9 @@
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-pdfjs": "^0.1.6",
     "vuetify": "^3.7.3",
-    "vuex": "^4.0.0",
+    "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
